[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Enemies/Bandit/Shotgun/Bandit.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Bandit/Bandit.gd" type="Script" id=2]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 2.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 160.012

[sub_resource type="Animation" id=6]
resource_name = "Fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[node name="Bandit" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -11 )
hframes = 4
vframes = 3
frame = 4

[node name="Gun" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -2.5 )
shape = SubResource( 1 )

[node name="Collisions" type="Node2D" parent="."]

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 3 )]
visible = false
mustBeInSight = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 2 )

[node name="CollisionChecker" type="RayCast2D" parent="Collisions"]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="FloorChecker" type="RayCast2D" parent="Collisions"]
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Timers" type="Node" parent="."]

[node name="StateChange" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="Jump" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 6 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 3 )

[connection signal="timeout" from="Timers/StateChange" to="." method="_on_state_change_timeout"]
[connection signal="timeout" from="Timers/Jump" to="." method="jump"]

[editable path="Collisions/PlayerDetection"]
